cabal-version: 2.4
name: HaskellBlogGenerator
version: 0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: BSD-3-Clause
license-file: LICENSE.txt
author: Guille
maintainer: g.granado.g@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

library HaskellBlogGeneratorLib
    import: common-settings
    exposed-modules:
        HsBlog
        HsBlog.Markup
        HsBlog.Html
        HsBlog.Convert
        HsBlog.Html.Internal

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        directory ^>=1.3.6.0

    hs-source-dirs:   src
    -- default-language: Haskell2010

executable HaskellBlogGenerator
    import: common-settings
    main-is:  Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        HsBlog
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        directory ^>=1.3.6.0

    hs-source-dirs: 
        - app
        - src
    -- default-language: Haskell2010
    ghc-options:
        -O
