cabal-version: 2.4
name: HaskellBlogGenerator
version: 0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license: BSD-3-Clause
license-file: LICENSE.txt
author: Guille
maintainer: g.granado.g@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

library HaskellBlogGeneratorLib
    import: common-settings
    exposed-modules:
        HsBlog
        HsBlog.Markup
        HsBlog.Html
        HsBlog.Convert
        HsBlog.Html.Internal

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        directory ^>=1.3.6.0,
        filepath ^>=1.4.2.1,
        mtl ^>=2.2.2,

    hs-source-dirs:   src
    -- default-language: Haskell2010

executable HaskellBlogGenerator
    import: common-settings
    main-is:  Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        OptParse
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        directory ^>=1.3.6.0,
        filepath ^>=1.4.2.1,
        mtl ^>=2.2.2,
        optparse-applicative ^>=0.17.0.0,
        HaskellBlogGeneratorLib ^>=0.1.0.0

    hs-source-dirs: 
        app,
        src
    -- default-language: Haskell2010
    ghc-options:
        -O

test-suite HaskellBlogGeneratorTest
    import: common-settings
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Spec.hs

    other-modules:
        MarkupParsingSpec
        
    build-depends:
        base
        , hspec
        , hspec-discover
        , raw-strings-qq
        , HaskellBlogGeneratorLib
    ghc-options:
        -O -threaded -rtsopts -with-rtsopts=-N
    build-tool-depends:
        hspec-discover:hspec-discover
